--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This file is here to define the beginning of Lab 2. Progress and questions will be recorded here.
+For game.py, I keep getting the "pygame.error: font not initialized"
+
+
